@@ -1,3 +1,0 @@
-gst-player is an application capable of playing almost any media type for
-which a GStreamer plugin exist.  It is developed by the GStreamer developers
-as a testing ground and sample application.
