@@ -1,4 +1,0 @@
-$NetBSD$
-
-SHA1 (gst-player-0.8.0.tar.bz2) = b1c0b32bc766e3fd1bb2b31e1da1f21c24cd5f67
-Size (gst-player-0.8.0.tar.bz2) = 413172 bytes
